✨ ENHANCED: Fresh deployment with bulk import/export + cache-busting
New Features:
- ✅ CSV/JSON student roster import
- ✅ Download sample roster template
- ✅ Export all data (students + results) in one click
- ✅ Cache-busting headers for instant updates
- ✅ Fresh deployment with new asset hashes

Export Formats Available:
- CSV (for Excel)
- JSON (for backup/transfer)
- FHIR R4 (for EMR integration)
- HL7 v2.5 (for legacy systems)

Import/Export Workflow:
1. Download sample roster CSV
2. Fill with student data
3. Import into app
4. Conduct screenings
5. Export results in any format

Cache Fix:
- Added Cache-Control headers to netlify.toml
- Forces browser to check for updates
- No more stale admin app showing

--- a/netlify.toml
+++ b/netlify.toml
@@ -25,6 +25,23 @@
 [build.processing.images]
   compress = true
 
+# Cache control headers to force fresh content
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+    
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Service Worker - always fresh
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
 # Redirect rules for SPA
 [[redirects]]
   from = "/*"
