--- a/.netlify/netlify.toml
+++ b/.netlify/netlify.toml
@@ -38,6 +38,18 @@ minify = true
 for = "/*"
 
 [headers.values]
+Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+for = "/sw.js"
+
+[headers.values]
+Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+for = "/*"
+
+[headers.values]
 X-Frame-Options = "DENY"
 X-XSS-Protection = "1; mode=block"
 X-Content-Type-Options = "nosniff"
